--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -39,6 +39,11 @@
             <div class="thread-content">
                 <span>{{ post.content | safe }}</span>
             </div>
+            <div class="thread-coments">
+                <div class="thread-coment-box">
+                    <button type="button" class="thread-coment-button">Responder</button>
+                </div>
+            </div>
         </div>
     </div>
 </body>
