link anchoring in post content

--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -37,7 +37,7 @@
                 <span>{{ post.title }}</span> 
             </div>
             <div class="thread-content">
-                <span>{{ post.content | safe }}</span>
+                <a>{{ post.content | safe }}</a>
             </div>
             <div class="thread-coments">
                 <div class="thread-coment-box">
