--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -327,3 +327,79 @@ body, html {
 .blue-box p {
     display: none; 
 }
+
+.publish-form input[type='text'] {
+    width: 100%;
+    padding: 10px;
+    margin: 8px 0;
+    border-radius: 10px;
+    border: 2px solid #fff;
+    color: #fff;
+    font-size: 14px;
+    background-color: transparent;
+    margin-bottom: 16px;
+}
+  
+.publish-form input[type='submit'] {
+    background-color: #fff;
+    color: #000;
+    border-radius: 10px;
+    border: 2px solid #fff;
+    padding: 10px 20px;
+    margin: 10px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    transition: transform 0.3s ease;
+    
+}
+
+.publish-form input[type='submit']:hover {
+    transform: scale(1.05); 
+}
+
+.publish-content{
+    width: 100%;
+    padding: 10px;
+    margin: 8px 0;
+    border-radius: 10px;
+    border: 2px solid #fff;
+    color: #fff;
+    font-size: 14px;
+    background-color: transparent;
+    margin-bottom: 16px;
+
+    height:auto;
+}
+
+.publish-form .links {
+    display: flex; 
+    justify-content: space-between;
+}
+
+.publish-form h1 {
+    font-size: 32px;
+    color: #fff;
+    font-weight: 500;
+}
+
+.publish-form h3 {
+    font-size: 12px;
+    color: #fff;
+    font-weight: 400;
+}
+
+.publish-form a {
+    font-size: 14px;
+    color: #fff;
+}
+
+.publish-form .errors {
+    display: flex; 
+    justify-content: space-between;
+}
+
+.publish-form p {
+    font-size: 12px;
+    color: #FF7373;
+}
